--- a/KReClassEx/KReClassEx.rc
+++ b/KReClassEx/KReClassEx.rc
@@ -98,8 +98,9 @@ BEGIN
             MENUITEM "DWord",                       ID_TYPE_DWORD
             MENUITEM "Word",                        ID_TYPE_WORD
             MENUITEM "Byte",                        ID_TYPE_BYTE
-            MENUITEM "ASCII",                       ID_TYPE_ASCII
+            MENUITEM "ASCII",                       ID_TYPE_TEXT
             MENUITEM "PCHAR",                       ID_TYPE_PCHAR
+            MENUITEM "PWCHAR",                      ID_TYPE_PWCHAR
             MENUITEM "Unicode",                     ID_TYPE_UNICODE
             MENUITEM "Float",                       ID_TYPE_FLOAT
             MENUITEM "Double",                      ID_TYPE_DOUBLE
